# PyKED

./: .buildinfo  .coveragerc  .doctr-files  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Exported Items.bib  LICENSE  MANIFEST.in  README.md  appveyor.yml  batch_convert.py  build-environment.yaml  chemked.html  ck-tutorial.html  codemeta.json  converters.html  development.html  genindex.html  github_deploy_key.enc  index.html  install.html  objects.inv  orcid.html  profile_code.py  py-modindex.html  pyked-examples.html  pylintrc  pyproject.toml  rcm-example.html  releases.html  requirements.txt  schema-docs.html  search.html  (+9 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  gh-pages.yml  live-api.yml  publish.yml
_modules/: index.html
_modules/pint/: registry.html  unit.html
_modules/pyked/: chemked.html  converters.html  orcid.html  validation.html
_sources/: chemked.rst.txt  converters.rst.txt  development.rst.txt  index.rst.txt  install.rst.txt  orcid.rst.txt  validation.rst.txt
_static/: documentation_options.js
chemked/: chemked.py  chemked_schema.yaml  exceptions.py  parse_files.py  utils.py  validation.py
chemked/tests/: dataframe_st.csv  test_chemked.py  test_parse_files.py  test_utils.py  test_validation.py  testfile_rcm.yaml  testfile_required.yaml  testfile_st.yaml  testfile_st2.yaml
conda.recipe/: meta.yaml
devel/: .doctr-files  chemked.html  ck-tutorial.html  converters.html  genindex.html  index.html  install.html  objects.inv  orcid.html  py-modindex.html  pyked-examples.html  rcm-example.html  releases.html  schema-docs.html  search.html  searchindex.js  shock-tube-example.html  utils.html  validation.html
devel/_modules/: index.html
devel/_modules/pint/: registry.html
devel/_modules/pyked/: chemked.html  converters.html  orcid.html  validation.html
devel/_sources/: ck-tutorial.rst.txt  index.rst.txt  install.rst.txt  rcm-example.ipynb.txt  releases.rst.txt  shock-tube-example.ipynb.txt
devel/_static/: documentation_options.js
devtools/: pandoc_installation.sh
docs/: Makefile  ck-tutorial.rst  conf.py  development.rst  index.rst  make.bat  rcm-example.ipynb  releases.rst  schema-docs.rst  shock-tube-example.ipynb
logo/: README.md
pyked/: __init__.py  _version.py  batch_convert.py  chemked.py  chemked_schema.yaml  converters.py  orcid.py  utils.py  validation.py
pyked/schemas/: burner_stabilized_flame_speciation_measurement_schema.yaml  chemked_schema.yaml  composition_schema.yaml  concentration_time_profile_measurement_schema.yaml  ignition_delay_schema.yaml  jet_stirred_reactor_measurement_schema.yaml  jsr_schema.yaml  laminar_burning_velocity_measurement_schema.yaml  outlet_concentration_measurement_schema.yaml  rate_coefficient_schema.yaml  species_profile_schema.yaml  uncertainty_schema.yaml  value_unit_schema.yaml
pyked/tests/: dataframe_st.csv  new_zhang_phi0.25.csv  test_chemked.py  test_converters.py  test_validation.py  test_version.py  testfile_bad.yaml  testfile_jsr1.yaml  testfile_many_species.yaml  testfile_rcm.xml  testfile_rcm.yaml  testfile_rcm2.yaml  testfile_rcm3.yaml  testfile_required.yaml  testfile_st.xml  testfile_st.yaml  testfile_st2.yaml  testfile_st_p5.yaml  testfile_uncertainty.yaml
src/pyked/: __init__.py  batch_convert.py  chemked.py  converters.py  orcid.py  species_validation.py  validation.py
src/pyked/schemas/: __init__.py  chemked_schema.yaml  (+7 more)
tags/v0.1.0/: .buildinfo  chemked.html  genindex.html  index.html  py-modindex.html  search.html  utils.html  validation.html
tags/v0.1.1/: .buildinfo  chemked.html  genindex.html  index.html  py-modindex.html  search.html  utils.html  validation.html
tags/v0.1.2/: .buildinfo  chemked.html  genindex.html  index.html  py-modindex.html  search.html  utils.html  validation.html
tags/v0.1.3/: .buildinfo  chemked.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  utils.html  validation.html
tags/v0.1.4/: .buildinfo  chemked.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html  validation.html
tags/v0.1.5/: .buildinfo  chemked.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  utils.html  validation.html
tags/v0.1.6/: .buildinfo  chemked.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  utils.html  validation.html
tags/v0.2.0/: chemked.html  ck-tutorial.html  converters.html  genindex.html  index.html  install.html  py-modindex.html  pyked-examples.html  schema-docs.html  search.html  utils.html  validation.html
tags/v0.2.1/: chemked.html  ck-tutorial.html  converters.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyked-examples.html  schema-docs.html  search.html  searchindex.js  utils.html  validation.html
tags/v0.3.0/: chemked.html  converters.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyked-examples.html  rcm-example.html  schema-docs.html  search.html  searchindex.js  utils.html  validation.html
tags/v0.4.0/: ck-tutorial.html  genindex.html  index.html  install.html  py-modindex.html  pyked-examples.html  validation.html
tags/v0.4.1/: .doctr-files  converters.html  genindex.html  index.html  install.html  objects.inv  orcid.html  py-modindex.html  pyked-examples.html  rcm-example.html  search.html  shock-tube-example.html
tags/v0.4.1a1/: .doctr-files  chemked.html  ck-tutorial.html  genindex.html  install.html  pyked-examples.html  rcm-example.html  schema-docs.html  searchindex.js  shock-tube-example.html
tests/: _mock_data.py  conftest.py  rcm_history.csv  test_chemked.py  test_converters.py  test_live_api.py  test_respecth_fixtures.py  test_species_validation.py  test_validation.py  test_version.py  testfile_bad.yaml  testfile_many_species.yaml  testfile_rcm.xml  testfile_required.yaml  testfile_st.yaml  testfile_st2.yaml  testfile_st_p5.yaml  testfile_st_thermo.yaml  testfile_uncertainty.yaml
(+76 files in other folders)
