[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyked"
dynamic = ["version"]
description = "Package for manipulating Chemical Kinetics Experimental Data (ChemKED) files."
authors = [
    {name = "Kyle E. Niemeyer", email = "kyleniemeyer@fastmail.com"},
    {name = "Bryan W. Weber", email = "bryan.w.weber@gmail.com"}
]
maintainers = [
    {name = "Kyle E. Niemeyer", email = "kyleniemeyer@fastmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["chemical kinetics"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering :: Chemistry',
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pyyaml",
    "cerberus",
    "pint>0.24.0",
    "uncertainties>=3.2",
    "habanero>=2.9.1",
    "httpx2>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dataframes = [
    "pandas>=2.2.0",
]
docs = [
    "sphinx",
    "nbsphinx",
    "ipython",
]
lint = [
    "pre-commit",
]

[tool.hatch.version]
path = "src/pyked/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyked"]

[project.urls]
Homepage = "https://github.com/pr-omethe-us/PyKED"
Documentation = "https://pr-omethe-us.github.io/PyKED/"
Repository = "https://github.com/pr-omethe-us/PyKED"
"Bug Tracker" = "https://github.com/pr-omethe-us/PyKED/issues"
Changelog = "https://github.com/pr-omethe-us/PyKED/blob/main/CHANGELOG.md"

[project.scripts]
convert_ck = "pyked.converters:main"
respth2ck = "pyked.converters:respth2ck"
ck2respth = "pyked.converters:ck2respth"

# tools
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_api: tests that call external APIs; run with 'pytest -m live_api'",
]
addopts = "-m 'not live_api'"
filterwarnings = [
    "ignore::pint.UnitStrippedWarning",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D415", # First line should end with period, question mark, or exclamation point
    "D416", # Section name should end with a colon
    "N802", # Function name should be lowercase (ReSpecTh is a proper noun)
    "N806", # Variable in function should be lowercase
    "N813", # CamelCase imported as lowercase (xml.etree.ElementTree as etree is conventional)
    "B028", # No explicit stacklevel keyword argument
    "B905", # zip() without explicit strict= parameter
    "C901", # Function is too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "RUF012"]
"docs/*.ipynb" = ["N803", "B007"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
show_error_codes = true

[tool.coverage.run]
source = ["pyked"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
]
